# molgeom

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  POSCAR_H2O.xyz  README.md  hoge.xyz  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
dev_dir/: conv_xyz_to_sdf.py  create_seq_mols.py  example_3dmoljs.html  example_3dmoljs_copy.html  example_3dmoljs_multi_mol_methods.html  example_3dmoljs_multi_mol_methods_v2.html  example_copilot_mol_v2.html  h2o_360.sdf  h2o_360.xyz  html_maker_test.py  html_maker_test_v2.py  html_mol_view_1.py  interactive_viewer2.html  molecule_visualization.html  simple_py3dmol.ipynb  tempCodeRunnerFile.py  viewer_output1.html
dev_dir/seq_mols/: rot_h2o_000.xyz  rot_h2o_001.xyz  rot_h2o_002.xyz  rot_h2o_003.xyz  rot_h2o_004.xyz  rot_h2o_005.xyz  rot_h2o_006.xyz  rot_h2o_007.xyz  rot_h2o_008.xyz  rot_h2o_009.xyz  rot_h2o_010.xyz  rot_h2o_011.xyz  rot_h2o_012.xyz  rot_h2o_013.xyz  rot_h2o_014.xyz  rot_h2o_015.xyz  rot_h2o_016.xyz  rot_h2o_017.xyz  rot_h2o_018.xyz  rot_h2o_019.xyz  rot_h2o_020.xyz  rot_h2o_021.xyz  rot_h2o_022.xyz  rot_h2o_023.xyz  rot_h2o_024.xyz  rot_h2o_025.xyz  rot_h2o_026.xyz  rot_h2o_027.xyz  rot_h2o_028.xyz  rot_h2o_029.xyz  rot_h2o_030.xyz  rot_h2o_031.xyz  rot_h2o_032.xyz  rot_h2o_033.xyz  rot_h2o_034.xyz  rot_h2o_035.xyz
exapmle_inputs/: 1.input_example.xyz  2.input_example.com  3.input_example.inp  7SbCl6.xyz  c607sbcl6.xyz  test.py
interfaces/: bonds_output.txt  geom_modifier.py  mol_bonds.py  mole_bonds.py  nuclear_repulsion.py  poscar2xyz.py  split_mol_clusters.py  view_mol_file.py  xyz_mass_center.py
molgeom/: __init__.py  _fancy_indexing_list.py  atom.py  bonds.py  consts.py  fancy_indexing_list.py  foo.py  molecule.py  parsers.py  test.py
molgeom/data/: bond_pairs_len.json  consts.py  implicit_valence.py  load_test.py
molgeom/parsers/: __init__.py  cif.py  gamess.py  gaussian.py  parser_selector.py  parser_tools.py  poscar.py  sdf.py  xyz.py
molgeom/templates/: mol_view_template.html
molgeom/utils/: __init__.py  _decorators.py  _fancy_indexing_list.py  decorators.py  fancy_indexing_list.py  html_utils.py  lattice_utils.py  mat3.py  polar.py  symmetry_utils.py  vec3.py
src/molgeom/: __init__.py  atom.py  molecule.py
src/molgeom/cli/: cli_main.py  geom_modifier.py  split_mol_clusters.py
src/molgeom/data/: bonds_jmol_ob.json
src/molgeom/interfaces/: mass_center.py  nuclear_repulsion.py  poscar2xyz.py
src/molgeom/parsers/: __init__.py  cif.py  gamess.py  gaussian.py  mol.py  parser_selector.py  parser_tools.py  poscar.py  sdf.py  xyz.py
src/molgeom/templates/: mol_view_template.html
src/molgeom/utils/: __init__.py  decorators.py  fancy_indexing_list.py  html_utils.py  mat3.py  symmetry_utils.py  vec3.py
tests/: test_Atom.py  test_FancyIndexingList.py  test_Molecule.py  test_atom.py  test_mat3.py  test_molecule.py  test_parsers.py  test_pbc.py  test_vec3.py
tests/files/: CH2_opt.com  H2O_with_Tv.com  I2_mp2.inp  I5_mp2.inp  POSCAR_H2O
