[project]
name = "molgeom"
description = "A simple molecular geometry manipulation library."
version = "0.6.1"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "sio-salt", email = "saltinthedesertyou@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "cachetools>=5.5.0",
    "click>=8.1.8",
    "networkx>=2.6.3",
    "pyyaml>=6.0.1",
]

[project.urls]
Source = "https://github.com/sio-salt/molgeom"

[project.scripts]
molgeom = "molgeom.cli.cli_main:cli"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["molgeom*"]

[tool.setuptools.package-data]
"molgeom" = [
    "data/*.json",
    "data/*.yaml",
    "templates/*.html"
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=7.4.4",
    "ruff>=0.9.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["F841"]
pydocstyle.convention = "google"
