[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molgeom"
description = "A simple molecular geometry manipulation library."
version = "0.6.6"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "sio-salt", email = "saltinthedesertyou@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "cachetools>=5.2.0",
    "click>=8.1.7",
    "networkx>=2.6.3",
]

[project.urls]
Homepage = "https://github.com/sio-salt/molgeom"
Repository = "https://github.com/sio-salt/molgeom"
Documentation = "https://github.com/sio-salt/molgeom-examples"

[project.scripts]
molgeom = "molgeom.cli.cli_main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["molgeom*"]

[tool.setuptools.package-data]
"molgeom" = [
    "data/*.json",
    "data/*.yaml",
    "templates/*.html"
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["F841"]
